[gd_scene load_steps=10 format=3 uid="uid://bkulfn8fo0c47"]

[ext_resource type="Script" path="res://Units/unit.gd" id="1_aqcu0"]
[ext_resource type="PackedScene" uid="uid://cyybrg631gniq" path="res://Components/selection.tscn" id="2_b46sx"]
[ext_resource type="PackedScene" uid="uid://x10cogs6d5ud" path="res://Components/health_bar.tscn" id="2_njlus"]
[ext_resource type="PackedScene" uid="uid://du0opqlxswb3l" path="res://Components/health_component.tscn" id="3_yrh6d"]
[ext_resource type="PackedScene" uid="uid://dddblpsohwys0" path="res://Components/attack_component.tscn" id="4_r1g6v"]
[ext_resource type="PackedScene" uid="uid://c15ykdiutqykk" path="res://Components/movement_component.tscn" id="5_r1x1f"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_q4qu2"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_tp1m8"]

[sub_resource type="CylinderMesh" id="CylinderMesh_pcebu"]
top_radius = 0.1
bottom_radius = 0.1
height = 0.5

[node name="unit" type="CharacterBody3D" groups=["units"]]
collision_layer = 2
collision_mask = 0
script = ExtResource("1_aqcu0")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_q4qu2")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(-1, 0, 0, 0, 1, 0, 0, 0, -1, 0, 1, 0)
mesh = SubResource("CapsuleMesh_tp1m8")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="MeshInstance3D"]
transform = Transform3D(-1.91069e-15, 4.37114e-08, -1, -1, -4.37114e-08, 0, -4.37114e-08, 1, 4.37114e-08, 5.96046e-08, 0.4, 0.7)
mesh = SubResource("CylinderMesh_pcebu")

[node name="Selection" parent="." instance=ExtResource("2_b46sx")]

[node name="HealthBar" parent="." node_paths=PackedStringArray("healthcomponent") instance=ExtResource("2_njlus")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.5, 0)
healthcomponent = NodePath("../HealthComponent")

[node name="HealthComponent" parent="." instance=ExtResource("3_yrh6d")]
max_health = 50

[node name="AttackComponent" parent="." instance=ExtResource("4_r1g6v")]
attack_damage = 12

[node name="AttackRange" parent="AttackComponent" index="0"]
collision_mask = 12

[node name="MovementComponent" parent="." instance=ExtResource("5_r1x1f")]
speed = 7

[editable path="AttackComponent"]
